[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/World/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/player.png" type="Texture" id=2]
[ext_resource path="res://src/World/Weapons/GunTurret.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/World/Weapons/GunTurretFireball.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Weapons/tileYellow_40.png" type="Texture" id=5]
[ext_resource path="res://src/World/Weapons/Bullets/BulletGreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/World/Weapons/Bullets/BulletYellow.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Weapons/tileGreen_40.png" type="Texture" id=8]
[ext_resource path="res://src/World/Weapons/Bullets/BulletBlue.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Weapons/tileBlue_40.png" type="Texture" id=10]
[ext_resource path="res://src/World/Weapons/GunTurretForward.tscn" type="PackedScene" id=11]

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="PickupBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupBox"]
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="GunTurretForward" parent="Pivot" instance=ExtResource( 11 )]
can_turn = false
projectile_speed = 200.0

[node name="GunTurretFireball" parent="Pivot" instance=ExtResource( 4 )]
visible = false

[node name="GunTurret5" parent="Pivot" instance=ExtResource( 3 )]
visible = false
gun_id = 5
damage_type = 4
bullet = ExtResource( 9 )

[node name="Sprite" parent="Pivot/GunTurret5" index="0"]
texture = ExtResource( 10 )

[node name="Pivot" parent="Pivot/GunTurret5" index="2"]
rotation = 3.92699

[node name="GunTurret4" parent="Pivot" instance=ExtResource( 3 )]
visible = false
gun_id = 4
damage_type = 3
bullet = ExtResource( 6 )

[node name="Sprite" parent="Pivot/GunTurret4" index="0"]
texture = ExtResource( 8 )

[node name="Pivot" parent="Pivot/GunTurret4" index="2"]
rotation = 2.35619

[node name="GunTurret3" parent="Pivot" instance=ExtResource( 3 )]
visible = false
gun_id = 3
damage_type = 2
bullet = ExtResource( 7 )

[node name="Sprite" parent="Pivot/GunTurret3" index="0"]
texture = ExtResource( 5 )

[node name="Pivot" parent="Pivot/GunTurret3" index="2"]
rotation = 5.49779

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="area_entered" from="PickupBox" to="." method="_on_PickupBox_area_entered"]

[editable path="Pivot/GunTurret5"]
[editable path="Pivot/GunTurret4"]
[editable path="Pivot/GunTurret3"]
